k8s/base/istio/hr-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hr-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - hr-gateway
  http:
    - match:
        - uri:
            exact: /healthz/ready
        - uri:
            prefix: /api/v1/employee
        - uri:
            prefix: /api/coroutine/user
      route:
        - destination:
            host: hrservice.hr.svc.cluster.local
            port:
              number: 9080
