k8s/base/istio/postgres-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: postgres-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - postgres-gateway
  tcp:
    - match:
        - port: 31400
      route:
        - destination:
            host: postgres-service.hr.svc.cluster.local
            port:
              number: 5432
